# 3DBus

./: .gitignore  CMakeLists.txt  README.md
include/: assetmanager.hpp  bus.hpp  game.hpp  object.hpp  player.hpp  renderer.hpp  road.hpp  terrain.hpp
shaders/: base.frag  base.vert  tree.frag  tree.vert
src/: assetmanager.cpp  bus.cpp  game.cpp  main.cpp  object.cpp  player.cpp  renderer.cpp  road.cpp  terrain.cpp
textures/: BusTexture.tga  bush.tga  road.tga  terrainSplat.tga  water-texture-2.tga
